ros_practical/ros2_ws/log/build_2024-10-13_06-07-58/my_package/stderr.log
  File "/ros2_ws/install/my_package/lib/python3.8/site-packages/my_package/minimal_pubsub.py", line 38
    self.msg_received = String)
                              ^
SyntaxError: unmatched ')'

